Container component, some responsive css added

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3e5905fb07e5b674748c0d59cccd584d"></script>
 
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=
-  %KAKAO_JS_KEY%"></script>
+
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
