--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
-  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3e5905fb07e5b674748c0d59cccd584d"></script>
+  <script
+    src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3e5905fb07e5b674748c0d59cccd584d&libraries=services,clusterer,drawing"></script>
 
 </head>
 
